Banner component done

--- a/Frontend/src/components/subComponents/footer/Footer.component.css
+++ b/Frontend/src/components/subComponents/footer/Footer.component.css
@@ -11,7 +11,7 @@
 
 .Footer_Wrapper {
     /* border: 1px solid red; */
-    position: absolute;
+    position: relative;
     bottom: 0;
     display: flex;
     justify-content: center;
