--- a/Frontend/src/components/pages/allpostpage/HeroComponent.css
+++ b/Frontend/src/components/pages/allpostpage/HeroComponent.css
@@ -77,13 +77,66 @@
     border-bottom: 1px solid rgb(84, 84, 84);
     width: 100%;
     height: 180px;
+    background-size: cover;
+    background-position: center;
 }
 
-.post_banner_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.post_banner_button_wrapper{
+    /* border: 1px solid blue; */
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-between;
+    gap: 1rem;
+    padding: .3rem;
 }
+
+.copy_link_button{
+    /* border: 1px solid red; */
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .2rem;
+    transition: ease-in .2s;
+    /* border-radius: 20%; */
+}
+
+.copy_icon{
+    height: 100%;
+    width: 100%;
+    border-radius: 20%;
+}
+
+.copy_icon:hover{
+    cursor: pointer;
+    box-shadow: 1px 1px 10px 0 rgb(75, 75, 75);
+}
+
+.delete_button{
+    /* border: 1px solid red; */
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .2rem;
+    transition: ease-in .15s;
+    border-radius: 50%;
+}
+
+.delete_icon{
+    height: 80%;
+    width: 80%;
+}
+
+.delete_button:hover{
+    cursor: pointer;
+    background-color: rgb(44, 44, 44);
+    border-radius: 50%;
+}
+
+
 
 
 
