--- a/Frontend/src/components/pages/createpage/Hero.component.css
+++ b/Frontend/src/components/pages/createpage/Hero.component.css
@@ -283,6 +283,7 @@
 }
 
 .draft_post {
+    /* visibility: hidden; */
     border: 2px solid rgb(0, 0, 0);
     border-radius: 4px;
     background-color: rgb(194, 108, 3);
