--- a/Frontend/src/components/pages/allpostpage/HeroComponent.css
+++ b/Frontend/src/components/pages/allpostpage/HeroComponent.css
@@ -92,23 +92,27 @@
 
 .copy_link_button{
     /* border: 1px solid red; */
-    height: 40px;
-    width: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: .2rem;
     transition: ease-in .2s;
     /* border-radius: 20%; */
 }
 
-.copy_icon{
-    height: 100%;
-    width: 100%;
+.copy_text{
+    /* border: 1px solid blue; */
+    color: rgb(70, 70, 70);
+    background-color: rgba(53, 255, 22, 0.779);
+    padding: .3rem .5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .85rem;
+    letter-spacing: 1px;
+    font-weight: bold;
     border-radius: 20%;
 }
 
-.copy_icon:hover{
+.copy_text:hover{
+    color: rgb(0, 0, 0);
     cursor: pointer;
     box-shadow: 1px 1px 10px 0 rgb(75, 75, 75);
 }
